added CrawlAllLeaderboardData and made updates for new model structure
